# coursework_waves

./: .gitignore  conv.data  convergence.sh  coursework_waves.pptx  gensens.sh  links.txt  meson.build  notes.txt  parplot.gpl  parplot.sh  plot.sh  problem-analytic.cpp  problem-detector.cpp  problem-difraction.cpp  problem-refraction.cpp  problem-simple.cpp  problem.cpp  problem.hpp  sensor.eps  sensors.ipynb  sensors_2.ipynb  solver.cpp  solver.hpp  waves.cpp  waves.gpl  waves.sh  Курсовая_обложка_6сем_МКН2.doc
.ipynb_checkpoints/: gensens-checkpoint.sh  sensors-checkpoint.ipynb  sensors_2-checkpoint.ipynb
report/: acoustic-2d-grid-ru.eps  course_work.bib  course_work.sty  cover.doc  detector.eps  detector.pgm  detector.ppm  difr.eps  edit.sh  makefile  refl.eps  refl.pgm  reflect.pgm  refr.eps  report.aux  report.bbl  report.bcf  report.blg  report.dvi  report.fdb_latexmk  report.fls  report.out  report.run.xml  report.tex  report.toc
sensor/: sensor_100x150.data  sensor_100x200.data  sensor_100x50.data  sensor_150x225.data  sensor_150x75.data  sensor_200x100.data  sensor_200x300.data  sensor_25x100.data  sensor_37x150.data  sensor_50x100.data  sensor_50x200.data  sensor_75x150.data
sensor_0.00/: sensor_150x225.data  sensor_150x75.data  sensor_37x150.data  sensor_75x150.data
sensor_0.005/: sensor_150x225.data  sensor_150x75.data  sensor_37x150.data  sensor_75x150.data
sensor_0.007/: sensor_150x225.data  sensor_150x75.data  sensor_37x150.data  sensor_75x150.data
sensor_0.009/: sensor_150x225.data  sensor_150x75.data  sensor_37x150.data  sensor_75x150.data
(+149 files in other folders)
